--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
   <section id="game"  class="game-section">
     <div class="overlay">
       <h2>El Juego</h2>
-      <p>Descripción o contenido del juego...</p>
+      <p>Descripción del maincra...</p>
     </div>
   </section>
 
   <section id="character" class="character-section">
     <div class="overlay">
       <h2>Personaje</h2>
-      <p>Información del personaje...</p>
+      <p>Información del Alice...</p>
     </div>
   </section>
 
   <section id="gallery" class="gallery-section">
     <div class="overlay">
       <h2>Galería</h2>
-      <p>Imágenes o contenido de la galería...</p>
+      <p>Escenas</p>
     </div>
   </section>
 
