--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <section id="character" class="character-section">
     <div class="overlay">
       <h2>Personaje</h2>
-      <p>Información del Alice...</p>
+      <p>Información de Alice...</p>
     </div>
   </section>
 
@@ -68,7 +68,7 @@
   </section>
 
 </main>
-<footer> que ponemos aca?</footer>
+<footer> Que ponemos aca? Hace hambre...</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
