agregué todas las imagenes y textos... los recuadros blancos y arregle la barra de navegación que se buegueaba al minimizar la página

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
   <section id="character" class="character-section">
     <div class="overlay">
 
-      <div class="col-md-4 d-flex justify-content-start">
-            <img src="assets/img/Alice.webp" class="img-fluid game-logo">
-          </div>
+    <div class="col-md-4 d-flex justify-content-end">
+      <img src="assets/img/Alice.webp" class="img-fluid game-logo">
+    </div>
 
       <p>Alice Liddell despierta en un mundo ajeno a toda razón, donde la oscuridad parece consciente 
         y la niebla oculta verdades que no deberían ser conocidas. 
@@ -90,17 +90,23 @@
     </div>
   </section>
 
-  <section id="gallery" class="gallery-section">
-    <div class="overlay">
-      <h2>Galería</h2>
-      <p>Escenas del juego</p>
+<section id="gallery" class="gallery-section">
+  <div class="overlay">
+    <div class="gallery">
+      <img src="assets/img/uknown.webp" alt="">
+      <img src="assets/img/something.webp" alt="">
+      <img src="assets/img/tower.webp" alt="">
+      <img src="assets/img/snow.webp" alt="">
     </div>
-  </section>
+  </div>
+</section>
+
+
 
 </main>
 
 <footer>
-  Que ponemos acá? Una buena polla :D
+  Que ponemos acá? 
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
