--- a/index.html
+++ b/index.html
@@ -48,47 +48,56 @@
   </section>
 
   <section id="game" class="game-section">
-    <div class="overlay">
-      <div class="container">
-        <div class="row align-items-center">
+  <div class="overlay">
+    <div class="container">
+      <div class="row align-items-center justify-content-center">
 
-          <div class="col-md-4 d-flex justify-content-center">
-            <img src="assets/img/maincra.webp" class="img-fluid game-logo">
-          </div>
-
-            <div class="mc-box">
-              <p>
-                Minecraft es un videojuego sandbox donde los jugadores pueden explorar,
-                construir y crear libremente en un mundo formado por bloques.
-                Ofrece modos como Supervivencia y Creativo.
-                <br><br>
-                El juego permite el uso de mods y skins que personalizan la experiencia.
-                Gracias a su comunidad activa, Minecraft sigue siendo uno de los juegos
-                más populares del mundo.
-              </p>
-            </div>
-
+        <div class="col-md-4 d-flex justify-content-center mb-4 mb-md-0">
+          <img src="assets/img/maincra.webp" class="img-fluid game-logo">
         </div>
+
+        <div class="col-md-6">
+          <div class="mc-box">
+            <p>
+              Minecraft es un videojuego sandbox donde los jugadores pueden explorar,
+              construir y crear libremente en un mundo formado por bloques.
+              <br><br>
+              Gracias a su comunidad activa, Minecraft sigue siendo uno de los juegos
+              más populares del mundo.
+            </p>
+          </div>
+        </div>
+
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <section id="character" class="character-section">
-    <div class="overlay">
+  <div class="overlay">
+    <div class="container">
+      <div class="row align-items-center justify-content-between">
 
-    <div class="col-md-4 d-flex justify-content-end">
-      <img src="assets/img/Alice.webp" class="img-fluid game-logo">
-    </div>
+        <div class="col-md-6">
+          <div class="mc-box">
+            <p>
+              Alice Liddell despierta en un mundo ajeno a toda razón, donde la oscuridad
+              parece consciente y la niebla oculta verdades que no deberían ser conocidas.
+              <br><br>
+              Sobrevivir no significa escapar, sino resistir lo suficiente para no ser reclamada
+              por aquello que observa desde más allá del mundo.
+            </p>
+          </div>
+        </div>
 
-      <p>Alice Liddell despierta en un mundo ajeno a toda razón, donde la oscuridad parece consciente 
-        y la niebla oculta verdades que no deberían ser conocidas. 
-        La fantasía se ha corrompido en algo antiguo y hostil. Con recursos 
-        escasos y una voluntad frágil pero persistente, Alice avanza sabiendo que sobrevivir 
-        no significa escapar, sino resistir lo suficiente para no ser reclamada por aquello que 
-        observa desde más allá del mundo.
-      </p>
+        <div class="col-md-4 d-flex justify-content-center">
+          <img src="assets/img/Alice.webp" class="img-fluid character-img">
+        </div>
+
+      </div>
     </div>
-  </section>
+  </div>
+</section>
 
 <section id="gallery" class="gallery-section">
   <div class="overlay">
@@ -106,7 +115,7 @@
 </main>
 
 <footer>
-  Que ponemos acá? 
+By Daniel & Luis
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
